src/syn/snapshots/tvm__syn__tests__partial_resilience.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    f()\n    f(); // still parsed\n  \"#)"
---
error: expected token `;`
1 |  f()
  |    ^

